<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#09C"
                android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/cityNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#09C"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/kazan"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold|italic"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical|right"
        android:layout_below="@+id/weatherImageView"
        android:layout_toStartOf="@+id/timeRefreshText"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/weatherImageView"
        android:src="@mipmap/weather01d"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tempCityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#09C"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/temp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical|right"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/weatherImageView"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/windText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#09C"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/wind"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical|right"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/_25_08_2016_11_58"
        android:id="@+id/timeRefreshText"
        android:layout_below="@+id/tempCityText"
        android:layout_alignStart="@+id/tempCityText"/>

</RelativeLayout>